[gd_scene load_steps=6 format=3 uid="uid://i471nlg56smq"]

[ext_resource type="Script" path="res://menu.gd" id="1_qwc5s"]
[ext_resource type="AudioStream" uid="uid://sc22xeqh0gg6" path="res://Audio/btn1.mp3" id="2_fg5kg"]
[ext_resource type="PackedScene" uid="uid://c2qe5o6bdtcdl" path="res://option_panel.tscn" id="2_jrol8"]
[ext_resource type="AudioStream" uid="uid://s5e8s3cbmy4a" path="res://Audio/btn2.mp3" id="3_rolv5"]
[ext_resource type="AudioStream" uid="uid://cnbngunaxijnb" path="res://Audio/cheap song.mp3" id="4_2jxul"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_qwc5s")

[node name="Panel" type="Panel" parent="."]
offset_right = 1155.0
offset_bottom = 650.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 669.0
offset_top = 149.0
offset_right = 917.0
offset_bottom = 499.0
theme_override_constants/separation = 14

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Play"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Options"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Quit"

[node name="OptionPanel" parent="." instance=ExtResource("2_jrol8")]

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
offset_left = 136.0
offset_top = 152.0
offset_right = 360.0
offset_bottom = 465.0
theme_override_constants/separation = 155

[node name="Title" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "TITLE"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="VBoxContainer2"]
layout_mode = 2

[node name="placeholder" type="Label" parent="VBoxContainer2/Panel"]
layout_mode = 2
offset_top = -75.0
offset_right = 224.0
offset_bottom = -49.0
text = "image placeholder"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Btn1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_fg5kg")
bus = &"SFX"

[node name="Btn2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_rolv5")
bus = &"SFX"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_2jxul")
bus = &"Music"

[connection signal="mouse_entered" from="VBoxContainer/Play" to="." method="_on_play_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Options" to="." method="_on_options_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
